@@ -13,8 +13,9 @@
     },
     {
       "tags": "get,python",
+      "version_min": "3.9.1",
       "version_max": "3.9.999",
-      "version_max_default": "3.9.12"
+      "version_max_usable": "3.9.12"
     }
   ],
   "post_deps": [
