@@ -1,3 +1,6 @@
+20220708:
+ * various fixes to handle versions (min/max/default)
+
 20220704:
  * fixed get-python-venv
 
